test/libyul/yulSyntaxTests/hex_switch_case.yul
{
    switch codesize()
    case hex"00" {}
    case hex"1122" {}
}
// ----
// ParserError 4805: (36-40): Literal expected.
